--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -5,3 +5,44 @@ dark-blue: #0a2c42;
 grey: #bfbfbf;
 font-family: Arial, Helvetica, sans-serif;
 */
+
+.test {
+    width: 100px;
+    height: 100px;
+    margin: auto;
+}
+.centered-beer {
+    padding-top: 120px;
+    display: flex;
+}
+.centered-beer > img {
+    width: 20%;
+    margin: auto;
+}
+.links {
+    display: flex;
+    flex-direction: column;
+    margin: 100px auto;
+}
+.links > a {
+    color: white;
+    background-color: #2081c3;
+    padding: 10px 20px;
+    border-radius: 8px;
+    margin: 20px auto;
+}
+
+.beer-container {
+    width: 100px;
+}
+
+.container {
+    margin: auto;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+.container > img {
+    width: 50px;
+    height: 150px;
+}
