--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,7 @@
-<div>
-
+<div class="centered-beer">
+    <img src="/images/beer.png" alt="BEER">
+</div>
+<div class="links">
+    <a href="/beers">Check the Beers!</a>
+    <a href="/random-beer">Check a Random Beer!</a>
 </div>
